added class for the buttons

--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -324,10 +324,11 @@
                 </div>
               </div>
               <div class="cal-inspector__footer">
-                <button id="inspDelete" class="cal-btn danger hidden">Delete</button>
-                <button id="inspCancel" class="cal-btn">Cancel</button>
-                <button id="inspSave" class="cal-btn primary">Save</button>
+                <button type="button" id="inspDelete" class="cal-btn danger hidden">Delete</button>
+                <button type="button" id="inspCancel" class="cal-btn">Cancel</button>
+                <button type="button" id="inspSave" class="cal-btn primary">Save</button>
               </div>
+
             </aside>
           </div>
         </section>
